# pipewire-controller

./: .gitignore  ARCHITECTURE.md  CI_CD_SETUP.md  CONTRIBUTING.md  IMPLEMENTATION_COMPLETE.md  MIGRATION.md  Makefile  OVERVIEW.md  PROJECT_SUMMARY.md  Pipewire Controller.desktop  PipewireController.desktop  README.md  TESTING.md  install  install.sh  pipewire_controller.py  pyproject.toml  run-tests-headless.sh  setup-dev.sh  uninstall  uninstall.sh
.github/workflows/: publish.yml  tests.yml
docs/: DOCS_CI_UPDATED.md  IMPLEMENTATION_COMPLETE.md  MIGRATION.md  OVERVIEW.md  PROJECT_SUMMARY.md  QUICK_REFERENCE_TESTING.md  REFACTORING_COMPLETE.md  TESTING.md  install
src/: pipewire-controller-git-install  pipewire-controller-git-uninstall  pipewire-controller.py
src/pipewire_controller/: __init__.py  __main__.py  engine.py
src/pipewire_controller/core/: __init__.py  hardware.py  pipewire.py
src/pipewire_controller/ui/: dialogs.py  tray.py
src/pipewire_controller/utils/: config.py  process.py
tests/: __init__.py  conftest.py  pytest_configure.py  test_engine.py  test_hardware.py  test_pipewire.py  test_ui.py
